# MM_CIFAR

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
cifar_rgb/: __init__.py  transforms.py
examples/: visualize.py
mmcifar/: datasets.py
tests/: test_dataset.py
